--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "firebase": "^8.5.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-avatar-editor": "^11.1.0",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rsuite": "^4.10.0",
+    "timeago-react": "^3.0.2",
+    "use-context-selector": "^1.3.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
